syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.user;

// User Interface of the DistLedger Service

enum ResponseCode {
  OK = 0;
  NON_EXISTING_USER = 1;
  USER_ALREADY_EXISTS = 3;
  AMOUNT_NOT_SUPORTED = 4;
}

message BalanceRequest {
  string userId = 1;
}

message BalanceResponse {
  ResponseCode code = 1;
  int32 value = 2;
}

message CreateAccountRequest {
  string userId = 1;
}

message CreateAccountResponse {
  ResponseCode code = 1;
}

message DeleteAccountRequest {
  string userId = 1;
}

message DeleteAccountResponse {
  ResponseCode code = 1;
}

message TransferToRequest {
  string accountFrom = 1;
  string accountTo = 2;
  int32 amount = 3;
}

message TransferToResponse {
  ResponseCode code = 1;
}

service UserService {
  rpc balance(BalanceRequest) returns (BalanceResponse);
  rpc createAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc deleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc transferTo(TransferToRequest) returns (TransferToResponse);
}
